--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -6,4 +6,5 @@
     <string name="main.button.increase">+</string>
     <string name="main.button.decrease">-</string>
     <string name="main.button.clear">Limpiar recientes</string>
+    <string name="main.menu.action.about">Acerca de</string>
 </resources>
