Added functionality to btnIncrease and btnDecrease

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -7,4 +7,6 @@
     <string name="main.button.decrease">-</string>
     <string name="main.button.clear">Limpiar recientes</string>
     <string name="main.menu.action.about">Acerca de</string>
+    <string name="global.message.bill">Propina %,.1f</string>
+    <string name="tipdetail.message.bill">Total %,.1f</string>
 </resources>
