--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="main.menu.action.about">About</string>
     <string name="global.message.bill">Tip %,.1f</string>
     <string name="tipdetail.message.bill">Total %,.1f</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
