--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,9 @@
     <string name="main.button.clear">Clear recent</string>
     <string name="main.menu.action.about">About</string>
     <string name="global.message.bill">Tip %,.1f</string>
-    <string name="tipdetail.message.bill">Total %,.1f</string>
+    <string name="tipdetail.message.bill">Total: </string>
+    <string name="tipdetail.message.tip">Tip: </string>
+    <string name="tipdetail.message.date">Date: </string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
